un cambio de panitaaaa locooooooo

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body{
-    padding:20px;
+    padding:200000000000000000000000000px;
     margin:20px 60px;
     font-family:Arial;
     font-size: 18px;
